templates/style/base.scss
// FIXME: Use modules
@import "vars", "rustdoc", "utils", "navbar";

html,
input,
select,
textarea,
.pure-g [class*="pure-u"] {
    font-family: $font-family-sans;
    color: $color-standard;
}

.pure-button-normal {
    background-color: #fff;
    box-sizing: border-box !important;
    border: 1px solid $color-border;
}

.description {
    font-family: $font-family-serif;
}

body {
    padding: 0;
    margin: 0;

    // rustdocs have 200px sidebar and
    // max-width 960px main pane
    // BUT I really want to make the website centered
    text-align: center;
    font: 16px/1.4 $font-family-sans;

    // Since top navbar is fixed, we need to add padding to the body content.
    padding-top: $top-navbar-height;

    // The scroll padding on the <body> is necessary for Chrome
    // browsers for now (see
    // https://css-tricks.com/fixed-headers-on-page-links-and-overlapping-content-oh-my/
    // for an explanation)
    scroll-padding-top: $top-navbar-height;

    // this is a super nasty override for help dialog in rustdocs
    // see #52 for details
    .blur > :not(#help) {
        filter: none;
        -webkit-filter: none;
    }

    .blur > div.nav-container > *,
    .blur > div.cratesfyi-package-container > *,
    .blur > div.rustdoc > :not(#help) {
        filter: blur(8px);
        -webkit-filter: blur(8px);
        opacity: 0.7;
    }
}

html {
    // Offset anchor jump targets down by this much, so they don't
    // overlap the top navigation bar (not supported on Desktop/Mobile
    // Safari yet):
    scroll-padding-top: $top-navbar-height;
}

pre {
    font-size: 0.9rem;
    overflow: auto;
    white-space: pre;
}

div.container {
    max-width: 1160px;
    text-align: left;
}

div.container-rustdoc {
    text-align: left;
}

div.nav-container-rustdoc {
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    z-index: 999;
}

.rustdoc:focus {
    outline: unset;
}

div.landing {
    text-align: center;
    padding-top: 30px;
    padding-bottom: 60px;

    h1.brand {
        font-size: 3em;
        margin-bottom: 10px;
    }

    form.landing-search-form {
        max-width: 500px;
        margin: 0 auto;
        padding: 0.4em 1em;

        div.buttons {
            margin-top: 30px;
        }
    }

    input#search {
        margin: 0;
    }
}

div.recent-releases-container {
    text-align: left;
    margin-bottom: 50px;

    ul,
    li {
        list-style-type: none;
        margin: 0;
        padding: 0;
    }

    ol.queue-list li {
        list-style-type: decimal;
        margin-left: 20px;

        a {
            color: $color-url;
        }
    }

    strong {
        font-weight: 500;
    }

    pre {
        white-space: pre-wrap;
    }

    .release {
        display: block;
        border-bottom: 1px solid $color-border;
        padding: 0.4em 1em;

        @media #{$media-lg} {
            padding: 0.4em 0;
            margin: 0 1em;
        }
    }

    .release:hover,
    li.selected > .release {
        background-color: $color-background-code;
    }

    li:last-child .release {
        border-bottom: none;
    }

    .name {
        color: $color-url;
        font-weight: 500;
        white-space: nowrap;
        margin: 0;

        &:hover {
            background-color: transparent;
        }

        &::before {
            display: none;
        }

        @media #{$media-sm} {
            text-overflow: ellipsis;
            overflow: hidden;
        }
    }

    .name:hover {
        overflow: visible;
        white-space: normal;
    }

    .build {
        font-weight: 500;

        span.fa-check {
            color: $color-macro;
        }
        span.fa-times {
            color: $color-struct;
        }
    }

    .description {
        font-family: $font-family-serif;
        font-weight: normal;

        @media #{$media-sm} {
            font-size: 1em;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
        }
    }

    .description:hover {
        @media #{$media-sm} {
            overflow: visible;
            white-space: normal;
        }
    }

    .date {
        font-weight: normal;

        @media #{$media-sm} {
            text-align: right;
        }
    }

    div.pagination {
        text-align: center;
        margin: 1em;

        .pure-button {
            margin: 0;
        }
    }

    h4 {
        border-bottom-color: $color-border !important;
    }
}

div.package-container {
    background-color: $color-url;
    color: $color-background-code;

    h1 {
        margin: 0;
        padding: 20px 0 0 16px;
    }
    p {
        margin: 0;
        padding: 0 0 20px 16px;
    }

    .pure-menu {
        .pure-menu-link {
            background-color: #fff;
            border-top: 1px solid $color-border;
            border-left: 1px solid $color-border;
            border-right: 1px solid $color-border;
            border-top-left-radius: 4px;
            border-top-right-radius: 4px;
            border-bottom: 2px solid $color-border;
            padding: 0.4em 1em;
        }

        .pure-menu-active {
            border-bottom: 2px solid #fff;
            color: $color-standard;
        }

        .pure-menu-link:hover {
            color: $color-standard;
        }
    }
}

div.package-sheet-container {
    margin-top: 10px;
    margin-bottom: 20px;

    .pure-menu-link {
        border-radius: 4px;
        padding: 0.2em 0.8em;
        font-weight: 400;
    }

    .build-success {
        color: $color-macro;
    }

    .build-fail {
        color: $color-struct;
    }
}
/* ... */

